# QmlApplication

./: CMakeLists.txt  EmiliaCockpit.sh  README.md  build-linux.sh  dependences.txt  qml.qrc
qml/: Theme.qml  main.qml
qml/custom/: BinPhotos.qml  CustomCheckBox.qml  CustomCheckBoxN.qml  CustomComboBox.qml  CustomImageButton.qml  CustomRoundButton.qml  CustomRoundComboBox.qml  CustomRoundTextArea.qml  CustomRoundTextField.qml  CustomTabButton.qml  DatePicker.qml  DosesArea.qml  LabelToolTip.qml  PillCheckerArea.qml  PillData.qml  PillPhoto.qml  PillsPhoto.qml  PrescriptionArea.qml  PrescriptionRow.qml  PrnArea.qml  PrnMediRow.qml  PrnRow.qml  RowElement.qml  ShippedItemDelegate.qml  TextFieldWithIcon.qml  TextMessageTableHeaderCheckBox.qml  TextMessageTableHeaderLabel.qml
qml/custom/Canister/: AllAvailable.qml  CanisterTabWidget.qml  CanistersWidget.qml  InstalledInDevice.qml
qml/custom/table_control/: AllAvailableRow.qml  BaseRowRectangle.qml  BinsModel.qml  Canister.qml  CellRectangle.qml  CellText.qml  CellTextEdit.qml  ContainerRow.qml  CustomPieMenu.qml  PrnBinRow.qml  PrnDayRow.qml  PrnMediRow.qml  SchBinRow.qml  SchDayRow.qml  SchMediRow.qml  TableCanisterControlRectangle.qml  TablePrnControlRectangle.qml  TableSchControlRectangle.qml  logic.js
qml/panels/: CartrigeRightPanel.qml  FillCheckerPanel.qml  LeftPanel.qml  RightPanel.qml
qml/tabs/: Canisters.qml  Cartriges.qml  OrderIntake.qml  Verification.qml
sql/: CREATE_DATABASE.sql  CREATE_USER.sql  sophic_medical_dump1.sql  sql.sh
src/: autodosingsch.cpp  autodosingsch.h  canisters.cpp  canisters.h  controller.cpp  controller.h  database.cpp  database.h  databaseworker.cpp  databaseworker.h  devicesmodel.cpp  devicesmodel.h  main.cpp  orderintaketable.cpp  orderintaketable.h  pillsmodel.cpp  pillsmodel.h  prescriptionmodel.cpp  prescriptionmodel.h  qmlhelpers.h  schmodel.cpp  schmodel.h  shippeditemmodel.cpp  shippeditemmodel.h  structures.h  utilites.cpp  utilites.h
xml/: cartridges.xml  prescriptions_1.xml  prescriptions_2.xml  prescriptions_3.xml  prn_area_2.xml  prn_bin_3.xml  prn_medi_3.xml  sch_area_3.xml  sch_bin_1.xml  sch_bin_2.xml  sch_medi_1.xml
xml/cartridges/: cartridge_1.xml  cartridge_5.xml
xml/med/: med_12.xml  med_3.xml  med_4.xml  med_5.xml  med_7.xml  med_8.xml  med_9.xml
xml/photo/: photo_1.xml  photo_10.xml  photo_2.xml  photo_3.xml  photo_4.xml  photo_5.xml  photo_7.xml  photo_8.xml
